@@ -26,3 +26,7 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
