@@ -31,3 +31,7 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.2.23'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.2'
 }
+
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
